force-app/main/default/objects/Account/fields/CPF_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CPF_CNPJ__c</fullName>
    <description>CPF ou CNPJ do Cliente</description>
    <externalId>true</externalId>
    <label>CPF / CNPJ</label>
    <length>14</length>
    <type>Text</type>
</CustomField>