force-app/main/default/objects/Account/fields/DDD_Telefone__c.field-meta.xml
<CustomField>
    <fullName>DDD_Telefone__c</fullName>
    <description>Telefone celular do cliente</description>
    <inlineHelpText>Este campo tem um limite de 11 números.</inlineHelpText>
    <label>DDD + Telefone</label>
    <length>11</length>
    <type>Text</type>
</CustomField>