force-app/main/default/objects/Account/fields/Estado_Civil__c.field-meta.xml
<CustomField>
    <fullName>Estado_Civil__c</fullName>
    <label>Estado Civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casado (a)</fullName>
            </value>
            <value>
                <fullName>Desquitado (a)</fullName>
            </value>
            <value>
                <fullName>Divorciado (a)</fullName>
            </value>
            <value>
                <fullName>Separado (a)</fullName>
            </value>
            <value>
                <fullName>Solteiro (a)</fullName>
            </value>
            <value>
                <fullName>Viúvo (a)</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>