force-app/main/default/objects/Account/fields/Nome_Completo__c.field-meta.xml
<CustomField>
    <fullName>Nome_Completo__c</fullName>
    <description>Nome completo do Cliente</description>
    <label>Nome Completo</label>
    <length>120</length>
    <type>Text</type>
</CustomField>