force-app/main/default/objects/Account/fields/Nome_Social__c.field-meta.xml
<CustomField>
    <fullName>Nome_Social__c</fullName>
    <description>Nome social</description>
    <label>Nome Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>