force-app/main/default/objects/Account/validationRules/Data_de_Nascimento_Maior_Hoje.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_de_Nascimento_Maior_Hoje</fullName>
    <active>true</active>
    <description>Só valida a data atribuída ao campo</description>
    <errorConditionFormula>PersonBirthdate &gt;= TODAY()</errorConditionFormula>
    <errorDisplayField>PersonBirthdate</errorDisplayField>
    <errorMessage>A data de nascimento tem que ser menor ou igual a data de hoje</errorMessage>
</ValidationRule>