force-app/main/default/objects/Account/validationRules/DDD_Telefone_Bloqueia_Alteracao.validationRule-meta.xml
<ValidationRule>
    <fullName>DDD_Telefone_Bloqueia_Alteracao</fullName>
    <active>true</active>
    <description>bloqueia a alteração para atendente e analista
Se o perfil for diferente de Atendente ou Analista = False
Se o telefone foi alterado e o valor anterior não for nulo = True

OBS: Falso não entra na regra</description>
    <errorConditionFormula>IF(AND($Profile.Name &lt;&gt; &apos;Atendente&apos;,$Profile.Name &lt;&gt; &apos;Analista&apos;) , false,
AND(ISCHANGED(DDD_Telefone__c ), NOT(ISBLANK(priorvalue(DDD_Telefone__c)))))</errorConditionFormula>
    <errorDisplayField>DDD_Telefone__c</errorDisplayField>
    <errorMessage>Não é possível alterar o campo DDD + Telefone</errorMessage>
</ValidationRule>